Made changes and fixed grammar

--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
 
   <!-- End Header -->
 
-
   <!-- Hero Section -->
 
   <section id="hero">
     <div class="hero container">
       <div>
         <h1>Hello,<span></span></h1>
-        <h1>My Name is<span></span></h1>
+        <h1>My name is<span></span></h1>
         <h1>ANMOL<span></span></h1>
         <a href="https://www.linkedin.com/in/anmoljaising" target="_blank" type="button" class="cta">LinkedIn</a>
       </div>
@@ -68,15 +67,15 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Software Engineer | Full Stack Engineer</h2>
-        <p>Hi! I'm Anmol Jaising! A pasionate, enthusiastic Software Engineer with experience around the areas of the
+        <p>Hi! I'm Anmol Jaising! A passionate, enthusiastic Software Engineer with experience around the areas of the
           Software and Web Development.</p>
         <p>In the past, I have interned with Copart as a Software Engineer, co-oped with GeekHive as a Full Stack
           Engineer Intern, and worked full-time with Accenture (India), as a Application Development Associate.</p>
-        <p>I also mentor undergraduate students learning the Python programming languageg for the first time.</p>
+        <p>I also mentor undergraduate students learning the Python programming language for the first time.</p>
         <p>Currently, I am co-oping with RIT's ITS on the EWA team, working mainly on eServices, a student payment
           platform.</p>
 
-        <a href="https://drive.google.com/drive/u/0/folders/1-5QxCZzEJQjCfQDL1GF3UY-lOHU8IHIo" target="_blank"
+        <a href="https://drive.google.com/file/d/133YnJfyCli89LxPAEBUq-N4hZr_mag1S/view?usp=sharing" target="_blank"
           class="cta">Download Resume</a>
       </div>
     </div>
@@ -155,7 +154,7 @@
         <h1 class="section-title">EXPER<span>i</span>ENCE</h1>
         <p>In my opinion, EXPERIENCE MATTERS !</p>
         <p>I have a couple of internships with GeekHive and Copart, two years of full-time work with Accenture in India,
-          I can condifidently say that</p>
+          I can confidently say that</p>
         <p><i>Experience is the hardest kind of teacher. It gives you test first and the lesson afterward.</i></p>
       </div>
       <div class="service-bottom">
@@ -163,7 +162,7 @@
           <div class="  icon"><img src="img/rit.jpg" /></div>
           <h2>Software Developer co-op</h2>
           <h2>RIT</h2>
-          <h3> Sepetember 2021 - PRESENT </h3>
+          <h3> September 2021 - PRESENT </h3>
           <p>Co-oping as a Java Developer at RIT's Information and Technology Service in the Enterprise Web Applications
             team!</p>
           <p>My work revolves around Java, Angular and Spring Boot.</p>
@@ -190,7 +189,7 @@
           <h2>GeekHive</h2>
           <h3>January 2020 - April 2020 </h3>
           <p>My first internship in the United States. As part of my internship, I designed and developed a Search
-            Report system for the American Society of Hematology (ASH) using Solr, MongoDB, and ElasticSearch.</p>
+            Report system for the American Society of Hematology (ASH) using Solr, MongoDB, and Elasticsearch.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="img/accenture.png" /></div>
@@ -216,7 +215,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Kafka Talker</h1>
-            <h2>Apache Kakfka, Java, Srping Boot</h2>
+            <h2>Apache Kafka, Java, Spring Boot</h2>
             <br>
             <p> A simple but powerful Spring Boot application on how to read JSON in Kafka topics. With streams, this is
               later shared between a Kafka producer and consumer.</p>
@@ -245,7 +244,7 @@
             <h1>UPSTAT-Conference</h1>
             <h2>HTML5, CSS3, PHP, JavaScript</h2>
             <br>
-            <p>A standardised webpage for American Statistical Association developers to create UP-STAT websites with
+            <p>A standardized webpage for American Statistical Association developers to create UP-STAT websites with
               ease, including real time participant registration.</p>
           </div>
           <a href="https://github.com/jaisinganmol/UPSTAT-Conference">
@@ -285,7 +284,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>Crime Patrol</h1>
-            <h2>Python, PostgreSQL, OpenRefine, Tableau, ARIMA</h2>
+            <h2>Python, PostgreSQL, Open Refine, Tableau, ARIMA</h2>
             <br>
             <p>An analysis project that makes of forecasting patterns to predict and prevent crimes!</p>
           </div>
@@ -300,7 +299,7 @@
             <h1>Munching Num-Num</h1>
             <h2>Python</h2>
             <br>
-            <p>A Big Data Analytics project that provides food recommendations based on yelp reviews.</p>
+            <p>A Big Data Analytics project that provides food recommendations based on yelp reviews. </p>
           </div>
           <a href="https://github.com/jaisinganmol/Munching-Num-Num">
             <div class="project-img">
