Updated address in index.html

--- a/index.html
+++ b/index.html
@@ -337,7 +337,9 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>256 East Squire Drive, Rochester, New York</h2>
+            <h2>285 Duncan Street</h2>
+            <br/>
+            <h2>San Francisco, California - 94131</h2>
           </div>
         </div>
         <div class="contact-item">
