--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 
   <!-- Contact Section -->
   <section id="contact">
-    <div class="contact container">
+    <div class="contact container-fluid">
       <div>
         <h1 class="section-title">Contact <span>info</span></h1>
       </div>
@@ -338,7 +338,6 @@
           <div class="contact-info">
             <h1>Address</h1>
             <h2>285 Duncan Street</h2>
-            <br/>
             <h2>San Francisco, California - 94131</h2>
           </div>
         </div>
