Updated index.html with content

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="hero container">
       <div>
         <h1>Hello,<span></span></h1>
-        <h1>My name is<span></span></h1>
+        <h1>I'm<span></span></h1>
         <h1>ANMOL<span></span></h1>
         <a href="https://www.linkedin.com/in/anmoljaising" target="_blank" type="button" class="cta">LinkedIn</a>
       </div>
@@ -72,10 +72,9 @@
         <p>In the past, I have interned with Copart as a Software Engineer, co-oped with GeekHive as a Full Stack
           Engineer Intern, and worked full-time with Accenture (India), as a Application Development Associate.</p>
         <p>I also mentor undergraduate students learning the Python programming language for the first time.</p>
-        <p>Currently, I am co-oping with RIT's ITS on the EWA team, working mainly on eServices, a student payment
-          platform.</p>
+        <p><b>Actively seeking Full-time opportunities as a Software Engineer.</b></p>
 
-        <a href="https://drive.google.com/file/d/1ui8RgtZ_pYfcOvXdZFd8ajpcIwJElXnt/view?usp=sharing" target="_blank"
+        <a href="https://drive.google.com/file/d/11De5oxCyc9G_a0t5uXYJueU2RU72ljHB/view?usp=sharing" target="_blank"
           class="cta">Download Resume</a>
       </div>
     </div>
@@ -163,25 +162,25 @@
           <h2>Software Developer co-op</h2>
           <h2>RIT</h2>
           <h3> September 2021 - December 2021</h3>
-          <p>Co-oping as a Java Developer at RIT's Information and Technology Service in the Enterprise Web Applications
+          <p>I interned as a Java Developer at RIT's Information and Technology Service in the Enterprise Web Applications
             team!</p>
-          <p>My work revolves around Java, Angular and Spring Boot.</p>
+          <p>My work revolved around Java, Angular and Spring Boot.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="img/copart.png" /></div>
           <h2>Software Engineering Intern</h2>
           <h2>Copart</h2>
           <h3>June 2021 - August 2021</h3>
-          <p>I worked at Copart, Inc as an intern in the Search and Shared Services team. Worked majorly on Java, Apache
-            Kafka, Spring Boot and Apache SOLR. </p>
+          <p>I worked at Copart as an intern in the Search and Shared Services team. I worked on technologies such as Java, Spring Boot 
+            and opensource technologies such as Apache Kafka and Apache Solr. </p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="img/rit.jpg" /></div>
           <h2>Undergraduate Teaching Assistant</h2>
           <h2>RIT</h2>
           <h3>August 2020 - December 2021</h3>
-          <p>I mentor and help undergraduate students who are learning Python for the first time. Built an application
-            that lets student automatically submit their homework for me to grade.</p>
+          <p>I mentor and help undergraduate students who are learning Python for the first time. Developed an application
+            for students to automatically submit their homework that eventually helped me to grade.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="img/gh.jpg" /></div>
@@ -189,7 +188,7 @@
           <h2>GeekHive</h2>
           <h3>January 2020 - April 2020</h3>
           <p>My first internship in the United States. As part of my internship, I designed and developed a Search
-            Report system for the American Society of Hematology (ASH) using Solr, MongoDB, and Elasticsearch.</p>
+            Report system for the American Society of Hematology (ASH) using Apache Solr, MongoDB, and Elasticsearch.</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="img/accenture.png" /></div>
@@ -258,7 +257,7 @@
             <h1>Spider Web Crawler</h1>
             <h2>Java, Spring Boot, JSoup</h2>
             <br>
-            <p>A multithreaded web crawler that crawls the hell out of a page to any wanted depth!</p>
+            <p>A multithreaded web crawler that crawls any valid page to any depth</p>
           </div>
           <a href="https://github.com/jaisinganmol/WebCrawler">
             <div class="project-img">
@@ -271,10 +270,7 @@
             <h1>World City Search Engine</h1>
             <h2>HTML, CSS, Node.js, MongoDB, Angular.js, GridFs</h2>
             <br>
-            <p>Full Stack web application where countries, cities and locations are found based on a partial search
-              using
-              regex</p>
-          </div>
+            <p>A Full-stack web application that searches for countries, cities and locations based on a regex.</p></div>
           <a href="https://github.com/jaisinganmol/World-City-Search-Engine">
             <div class="project-img">
               <img src="./img/img-1.png" alt="img">
@@ -337,8 +333,8 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>285 Duncan Street</h2>
-            <h2>San Francisco, California - 94131</h2>
+            <h2>256 East Squire Drive</h2>
+            <h2>Rochester, New York - 14623</h2>
           </div>
         </div>
         <div class="contact-item">
