--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <p>I also mentor undergraduate students learning the Python programming language for the first time.</p>
         <p><b>Actively seeking Full-time opportunities as a Software Engineer.</b></p>
 
-        <a href="https://drive.google.com/file/d/15bBbk6-vxYzA1UlR8prh9JiXf_pcu9CY/view?usp=sharing" target="_blank"
+        <a href="https://drive.google.com/drive/u/0/folders/1rWUs1llj5Yu_exXFvzlIEI7N5kUSmxYF" target="_blank"
           class="cta">Download Resume</a>
       </div>
     </div>
@@ -333,8 +333,8 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>256 East Squire Drive</h2>
-            <h2>Rochester, New York - 14623</h2>
+            <h2>35 Harbor Point Boulevard, Apt 503</h2>
+            <h2>Boston, Massachusetts - 02125</h2>
           </div>
         </div>
         <div class="contact-item">
@@ -380,7 +380,7 @@
               src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
         </div>
       </div>
-      <p>Copyright © 2021 Anmol Jaising . All rights reserved</p>
+      <p>Copyright © 2024 Anmol Jaising . All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
